# tampsolver

./: .gitignore  .rosinstall  README.md
multicontact_controller/: CMakeLists.txt  package.xml
multicontact_controller/euslisp/: end-effector-state-machine.l  multicontact-mode-switcher.l  (+1 more)
multicontact_controller/src/ContactBreakAbilityChecker/: CMakeLists.txt  ContactBreakAbilityChecker.cnoid  ContactBreakAbilityChecker.cpp  ContactBreakAbilityCheckerROS.cpp  ContactBreakAbilityCheckerROSItem.cpp  ContactBreakAbilityCheckerROSNode.cpp  contact_breakability_checker_withviewer
multicontact_controller/src/ContactForceEstimator/: CMakeLists.txt  ContactForceEstimator.cnoid  ContactForceEstimator.cpp  ContactForceEstimatorROS.cpp  ContactForceEstimatorROSItem.cpp  ContactForceEstimatorROSNode.cpp  contact_force_estimator_withviewer
multicontact_controller/src/ContactForceFilter/: CMakeLists.txt  ContactForceFilter.cpp
multicontact_controller/src/EndEffectorInfoPublisher/: CMakeLists.txt  EndEffectorInfoPublisher.cpp
multicontact_controller/src/EndEffectorInteractiveMarkerServer/: CMakeLists.txt  EndEffectorInteractiveMarkerServer.cpp
multicontact_controller/src/EndEffectorStatePublisher/: CMakeLists.txt  EndEffectorStatePublisher.cpp
multicontact_controller/src/ForceSensorFilter/: CMakeLists.txt  ForceSensorFilter.cpp
multicontact_controller/src/IdleFootCoords/: CMakeLists.txt  IdleFootCoords.cpp
multicontact_controller/src/JointStatesFilter/: CMakeLists.txt  JointStatesFilter.cpp
multicontact_controller/src/MotorTemperatureEstimator/: CMakeLists.txt  MotorTemperatureEstimator.cpp  MotorTemperatureEstimatorNode.cpp
multicontact_controller/src/MotorTemperatureLimiter/: CMakeLists.txt  MotorTemperatureLimiter.cpp
multicontact_controller/src/MultiContactFootCoords/: CMakeLists.txt  MultiContactFootCoords.cnoid  MultiContactFootCoords.cpp  MultiContactFootCoordsROS.cpp  MultiContactFootCoordsROSItem.cpp  MultiContactFootCoordsROSNode.cpp  multicontact_footcoords_withviewer
multicontact_controller/src/PCLCollisionDetector/: CMakeLists.txt  PCLCollisionDetector.cnoid  PCLCollisionDetector.cpp  PCLCollisionDetectorROS.cpp  PCLCollisionDetectorROSItem.cpp  PCLCollisionDetectorROSNode.cpp  pcl_collision_detector_withviewer
multicontact_controller/src/PWTController/: CMakeLists.txt  PWTController.cnoid  PWTController.cpp  PWTControllerROS.cpp  PWTControllerROSItem.cpp  PWTControllerROSNode.cpp  pwt_controller_withviewer
multicontact_controller/src/SelfCollisionDetector/: CMakeLists.txt  SelfCollisionDetector.cnoid  SelfCollisionDetector.cpp  SelfCollisionDetectorROS.cpp  SelfCollisionDetectorROSItem.cpp  SelfCollisionDetectorROSNode.cpp  self_collision_detector_withviewer
multicontact_controller/src/WalkController/: CMakeLists.txt  WalkController.cnoid  WalkController.cpp  WalkControllerROS.cpp  WalkControllerROSItem.cpp  WalkControllerROSNode.cpp  walk_controller_withviewer
multicontact_controller/src/lib/CnoidBodyUtils/: CMakeLists.txt  CnoidBodyUtils.cpp  Collision.cpp  Contact.cpp  ContactPoint.cpp  Drawing.cpp  Interaction.cpp  JointInfo.cpp  JointLimitTable.cpp  TorqueJacobianCalculator.cpp
multicontact_controller/src/lib/EndEffectorUtils/: CMakeLists.txt  EndEffectorUtils.cpp
multicontact_controller_msgs/: CMakeLists.txt  package.xml
obsoleted/symbol_geometry_planner/src/IK/: CMakeLists.txt  Util.h
obsoleted/symbol_geometry_planner/src/IK/Constraints/: IKConstraint.cpp  PositionConstraint.h
obsoleted/symbol_geometry_planner/src/RobotConfig/: CMakeLists.txt  RobotConfig.cpp
obsoleted/symbol_geometry_planner/src/SampleItem/: CMakeLists.txt  IKSampleItem.cpp  IrtViewerSampleItem.h  MultiContactIKSampleItem.cpp  PddlSampleItem.cpp  ReachSampleItem.cpp  RoboptimSampleItem.cpp  RoboptimSparseSampleItem.cpp  RoboptimSparseSampleItem.h  SymbolGeometryPlannerPlugin.cpp
obsoleted/symbol_geometry_planner/src/Utility/: CMakeLists.txt  Util.cpp
symbol_geometry_planner/: CMakeLists.txt  README.md  package.xml
symbol_geometry_planner/src/: CMakeLists.txt  SymbolGeometryPlannerPlugin.cpp
symbol_geometry_planner/src/IK/: CMakeLists.txt  IKsolver.cpp  IKsolver.h  OsqpEigenSolver.cpp  OsqpEigenSolver.h  Util.cpp  Util.h
symbol_geometry_planner/src/IK/Constraints/: AISTCollisionConstraint.h  CMakeLists.txt  CddSCFRConstraint.cpp  CddSCFRConstraint.h  CollisionConstraint.cpp  CollisionConstraint.h  IKConstraint.cpp  IKConstraint.h  LPSCFRConstraint.h  MinMaxConstraint.h  MinMaxJointConstraint.cpp  MinMaxJointConstraint.h  PositionConstraint.cpp  PositionConstraint.h  SCFRConstraint.cpp  SCFRConstraint.h
symbol_geometry_planner/src/IKSampleItem/: IKSampleItem.cpp  IKSampleItem.h
symbol_geometry_planner/src/IrtViewerSampleItem/: IrtViewerSampleItem.cpp  IrtViewerSampleItem.h
symbol_geometry_planner/src/MultiContactIKSampleItem/: MultiContactIKSampleItem.cpp  MultiContactIKSampleItem.h
symbol_geometry_planner/src/PddlSampleItem/: PddlSampleItem.h
symbol_geometry_planner/src/PlannerBaseItem/: PlannerBaseItem.cpp  PlannerBaseItem.h
symbol_geometry_planner/src/RoboptimSampleItem/: RoboptimSampleItem.cpp  RoboptimSampleItem.h
symbol_geometry_planner/src/RoboptimSparseSampleItem/: RoboptimSparseSampleItem.h
symbol_geometry_planner/src/RobotConfig/: CMakeLists.txt  EditCollisionModel.cpp  EditCollisionModel.h  EndEffector.cpp  EndEffector.h  JointLimitTable.cpp  JointLimitTable.h  RobotConfig.cpp  RobotConfig.h
symbol_geometry_planner/src/SampleItem/: CMakeLists.txt  IKSampleItem.cpp  IKSampleItem.h  IrtViewerSampleItem.h  MultiContactIKSampleItem.cpp  MultiContactIKSampleItem.h  PddlSampleItem.h  PlannerBaseItem.cpp  ReachSampleItem.cpp  ReachSampleItem.h  RoboptimSampleItem.cpp  RoboptimSampleItem.h  RoboptimSparseSampleItem.cpp  RoboptimSparseSampleItem.h  SymbolGeometryPlannerPlugin.cpp
symbol_geometry_planner/src/Utility/: CMakeLists.txt  Util.h
symbol_geometry_planner/work/ViewerSamplePlugin/: CMakeLists.txt  ViewerSamplePlugin.cpp  viewer.cnoid
symbol_geometry_planner/work/onlineviewer/: CMakeLists.txt  onlineviewer.sh
(+86 files in other folders)
